tests/integration/tests/di/ui/fail/invalid_inject_type.stderr
error[E0277]: the trait bound `NonInjectableService: Clone` is not satisfied
  --> tests/di/ui/fail/invalid_inject_type.rs:14:16
   |
14 |     let service = Depends::<NonInjectableService>::resolve(&ctx)
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `NonInjectableService`
   |
note: required by a bound in `Depends`
  --> $WORKSPACE/crates/reinhardt-di/src/depends.rs
   |
   | pub struct Depends<T: Clone + Send + Sync + 'static> {
   |                       ^^^^^ required by this bound in `Depends`
help: consider annotating `NonInjectableService` with `#[derive(Clone)]`
   |
 4 + #[derive(Clone)]
 5 | struct NonInjectableService {
   |

error[E0599]: the function or associated item `resolve` exists for struct `Depends<NonInjectableService>`, but its trait bounds were not satisfied
  --> tests/di/ui/fail/invalid_inject_type.rs:14:49
   |
 4 | struct NonInjectableService {
   | --------------------------- doesn't satisfy `NonInjectableService: Clone`
...
14 |     let service = Depends::<NonInjectableService>::resolve(&ctx)
   |                                                    ^^^^^^^ function or associated item cannot be called on `Depends<NonInjectableService>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `NonInjectableService: Clone`
help: consider annotating `NonInjectableService` with `#[derive(Clone)]`
   |
 4 + #[derive(Clone)]
 5 | struct NonInjectableService {
   |

error[E0282]: type annotations needed
  --> tests/di/ui/fail/invalid_inject_type.rs:14:16
   |
14 |       let service = Depends::<NonInjectableService>::resolve(&ctx)
   |  ___________________^
15 | |         .await
   | |______________^ cannot infer type
